--- a/frontend/app/components/visits/details/visit-details.component.html
+++ b/frontend/app/components/visits/details/visit-details.component.html
@@ -5,8 +5,8 @@
                 <gn-cmr-breadcrumb [path]="path" [currentPage]="module.forms.visit.label"></gn-cmr-breadcrumb>
                 <div class="toolbar clearfix">
                     <h3 class="float-left">{{module.forms.visit.label}}</h3>
-                    <button class="btn btn-danger float-right ml-2" (click)="openModalDownload($event, modalDelete)"><i class="fa fa-trash"></i>&nbsp;Supprimer</button>
-                    <button class="btn btn-primary float-right" [routerLink]="['..', {edit: visit.id_visit}]"><i class="fa fa-pencil"></i>&nbsp;Editer</button>
+                    <button *ngIf="module?.cruved?.D !== '0'"class="btn btn-danger float-right ml-2" (click)="openModalDownload($event, modalDelete)"><i class="fa fa-trash"></i>&nbsp;Supprimer</button>
+                    <button *ngIf="module?.cruved?.U !== '0'"class="btn btn-primary float-right" [routerLink]="['..', {edit: visit.id_visit}]"><i class="fa fa-pencil"></i>&nbsp;Editer</button>
                 </div>
                 <div class="">
                     <nav>
@@ -32,7 +32,7 @@
             <div class="" *ngIf="visit.observation">
                 <h3>{{module.forms.observation.label_plural}}</h3>
                 <div class="toolbar clearfix">
-                    <button class="btn btn-success float-left" (click)="onClickAddObservation()"><i class="fa fa-plus-circle"></i>&nbsp;Ajout Observation</button>
+                    <button *ngIf="module?.cruved?.C !== '0'"class="btn btn-success float-left" (click)="onClickAddObservation()"><i class="fa fa-plus-circle"></i>&nbsp;Ajout Observation</button>
                 </div>
                 <ngx-datatable #table
                     class="material striped margin-top-xs"
@@ -49,7 +49,7 @@
                             <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['observation', row.id_observation]">
                                 <i class="fa fa-info-circle" aria-hidden="true" [matTooltip]="'Détails ' + module.forms.observation.label"></i>
                             </a>
-                            <a class="clickable btn btn-no-padding bt-ghost ml-1" [routerLink]="['individual', row.id_individual, 'observation', {edit: row.id_observation}]">
+                            <a *ngIf="module?.cruved?.U !== '0'" class="clickable btn btn-no-padding bt-ghost ml-1" [routerLink]="['individual', row.id_individual, 'observation', {edit: row.id_observation}]">
                                 <i class="fa fa-pencil-square-o" aria-hidden="true" [matTooltip]="'Editer ' + module.forms.observation.label"></i>
                             </a>
                         </ng-template>
