--- a/frontend/app/components/individuals/details/individual-details.component.html
+++ b/frontend/app/components/individuals/details/individual-details.component.html
@@ -4,6 +4,7 @@
         <div class="toolbar clearfix">
             <h3 class="float-left">{{module.forms.individual.label}}: {{individual.identifier}}</h3>
             <button *ngIf="module?.cruved?.D !== '0'" class="btn btn-danger float-right ml-2" (click)="openModalDownload($event, modalDelete)"><i class="fa fa-trash"></i>&nbsp;Supprimer</button>
+            <button *ngIf="module?.cruved?.C !== '0'" class="btn btn-success float-right ml-2" [routerLink]="['visit']"><i class="fa fa-plus"></i>&nbsp;Ajouter visite</button>
             <button *ngIf="module?.cruved?.E !== '0'" class="btn btn-primary float-right ml-2" (click)="openModalDownload($event, modalDownload)"><i class="fa fa-arrow-down"></i>&nbsp;Exports</button>
             <button *ngIf="module?.cruved?.U !== '0'" class="btn btn-primary float-right ml-2" [routerLink]="['..', {edit: individual.id_individual}]"><i class="fa fa-pencil"></i>&nbsp;Editer</button>
         </div>
