Site form: update piege_type and link fields in sub-module specific

--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -42,6 +42,13 @@
     height: 31px;
 }
 
+:host ::ng-deep select {
+  height: calc(1.5em + .5rem + 2px);
+  padding: .25rem .5rem;
+  font-size: .875rem;
+  line-height: 1.5;
+  border-radius: .2rem;
+}
 /** tables **/
 :host /deep/ .datatable-body-row.active .datatable-row-group {
     background-color: rgb(117, 227, 118) !important;
