Add possibility to configure a validation between dates inside a form

--- a/frontend/app/components/individuals/form-obs/individual-form-obs.component.html
+++ b/frontend/app/components/individuals/form-obs/individual-form-obs.component.html
@@ -21,6 +21,7 @@
           [myFormGroup]="individualForm"
           [formsDefinition]="individualFormDefinitions"
         ></pnx-dynamic-form-generator>
+        <gn-cmr-form-error [form]="individualForm"></gn-cmr-form-error>
      </form>
     </div>
   </div>
