--- a/frontend/app/components/individuals/form/individual-form.component.html
+++ b/frontend/app/components/individuals/form/individual-form.component.html
@@ -13,6 +13,7 @@
             [formsDefinition]="individualFormDefinitions"
           ></pnx-dynamic-form-generator>
 
+          <gn-cmr-form-error [form]="individualForm"></gn-cmr-form-error>
           <div class="clearfix mt-3">
             <button class="btn btn-primary float-left" [routerLink]="['..']" *ngIf="!bEdit">Annuler</button>
             <button class="btn btn-primary float-left" [routerLink]="['..', 'individual', individual.id_individual]" *ngIf="bEdit">Annuler</button>
