--- a/frontend/app/components/observation/form/observation-form.component.html
+++ b/frontend/app/components/observation/form/observation-form.component.html
@@ -45,6 +45,7 @@
           [myFormGroup]="observationForm"
           [formsDefinition]="observationFormDefinitions"
         ></pnx-dynamic-form-generator>
+        <gn-cmr-form-error [form]="observationForm"></gn-cmr-form-error>
         <div class="card mt-3 border-primary" *ngFor="let grp of formGroups" >
           <div class="card-header bg-primary text-white">
             <a data-toggle="collapse" [href]="'#collapse-body-' + grp['id']" role="button" [attr.aria-expanded]="grp.defaults.opened === true" [attr.aria-controls]="'collapse-body-' + grp['id']">
@@ -63,6 +64,7 @@
               [myFormGroup]="grp['form']"
               [formsDefinition]="grp['formDef']">
             </pnx-dynamic-form-generator>
+            <gn-cmr-form-error [form]="grp['form']"></gn-cmr-form-error>
           </div>
         </div>
         <div class="clearfix mt-3">
