--- a/frontend/app/components/sites/form/site-form.component.html
+++ b/frontend/app/components/sites/form/site-form.component.html
@@ -41,6 +41,7 @@
           [formsDefinition]="siteFormDefinitions"
         ></pnx-dynamic-form-generator>
 
+        <gn-cmr-form-error [form]="siteForm"></gn-cmr-form-error>
         <div class="clearfix mt-3">
           <button class="btn btn-primary float-left" [routerLink]="['..']" *ngIf="!bEdit">Annuler</button>
           <button class="btn btn-primary float-left" [routerLink]="['..', 'site', site.id_site]" *ngIf="bEdit">Annuler</button>
