--- a/frontend/app/components/visits/form-ind/visit-form-ind.component.html
+++ b/frontend/app/components/visits/form-ind/visit-form-ind.component.html
@@ -43,6 +43,7 @@
           [myFormGroup]="siteForm"
           [formsDefinition]="siteFormDefinitions"
         ></pnx-dynamic-form-generator>
+        <gn-cmr-form-error [form]="siteForm"></gn-cmr-form-error>
       </div>
       <hr>
       <h4>Création {{module.forms.visit.label}}</h4>
@@ -61,6 +62,7 @@
           [myFormGroup]="genericVisitForm"
           [formsDefinition]="visitFormDefinitions"
         ></pnx-dynamic-form-generator>
+        <gn-cmr-form-error [form]="genericVisitForm"></gn-cmr-form-error>
         <div class="clearfix mt-3">
           <button class="btn btn-primary float-left" [routerLink]="['..']">Annuler</button>
           <button *ngIf="!bChainInput  && !bEdit" class="btn btn-success float-right ml-2" [disabled]="!siteForm.valid || !visitForm.valid || !genericVisitForm.valid || !visitForm.get('observation').value || bSaving" (click)="onSubmit(true)">
