--- a/frontend/app/components/visits/form/visit-form.component.html
+++ b/frontend/app/components/visits/form/visit-form.component.html
@@ -38,7 +38,7 @@
           [myFormGroup]="genericVisitForm"
           [formsDefinition]="visitFormDefinitions"
         ></pnx-dynamic-form-generator>
-
+        <gn-cmr-form-error [form]="genericVisitForm"></gn-cmr-form-error>
         <div class="clearfix mt-3">
           <button class="btn btn-primary float-left" [routerLink]="['..']" *ngIf="!bEdit">Annuler</button>
           <button class="btn btn-primary float-left" [routerLink]="[visit.id_visit]" *ngIf="bEdit">Annuler</button>
