--- a/frontend/app/components/visits/details/visit-details.component.html
+++ b/frontend/app/components/visits/details/visit-details.component.html
@@ -1,10 +1,9 @@
 <div class="main">
+  <gn-cmr-header [path]="path" [currentPage]="module.forms.visit.label"></gn-cmr-header>
   <div class="flex-container">
     <div class="cadre" [style.min-height]="cardContentHeight + 'px'">
       <div id="details">
-        <gn-cmr-breadcrumb [path]="path" [currentPage]="module.forms.visit.label"></gn-cmr-breadcrumb>
         <div class="toolbar clearfix">
-          <h3 class="float-left">{{module.forms.visit.label}}</h3>
           <button *ngIf="module?.cruved?.D !== '0'"class="btn btn-danger float-right ml-2" (click)="openModalDownload($event, modalDelete)"><i class="fa fa-trash"></i>&nbsp;Supprimer</button>
           <button *ngIf="module?.cruved?.U !== '0'"class="btn btn-primary float-right" [routerLink]="['..', {edit: visit.id_visit}]"><i class="fa fa-pencil"></i>&nbsp;Editer</button>
         </div>
@@ -28,7 +27,7 @@
         ></pnx-geojson>
       </pnx-map>
     </div>
-    <div [class]="'cadre scroll' + (visit.observation ? '' : ' no-observation')">
+    <div [class]="'cadre scroll' + (visit.observation ? '' : ' cadre-empty')">
       <div *ngIf="!visit.observation">
         <h4 class="font-italic">Visite sans observation</h4>
       </div>
