--- a/frontend/app/components/observation/form/observation-form.component.html
+++ b/frontend/app/components/observation/form/observation-form.component.html
@@ -1,11 +1,8 @@
 <div class="main">
+  <gn-cmr-header [path]="path" [currentPage]="(bEdit ? 'Edition ' : 'Création ') + module.forms.observation.label"></gn-cmr-header>
   <div class="flex-container">
     <div class="cadre" [style.min-height]="cardContentHeight + 'px'" [style.max-height]="cardContentHeight + 'px'">
       <div id="details">
-        <gn-cmr-breadcrumb [path]="path" [currentPage]="(bEdit ? 'Edition ' : 'Création ') + module.forms.observation.label"></gn-cmr-breadcrumb>
-        <div class="">
-          <h3>{{ (bEdit ? 'Edition ' : 'Création ') + module.forms.observation.label}}</h3>
-        </div>
         <div class="">
           <div class="mb-2">
             <span><strong>{{module.forms.site.label}}: </strong><a [routerLink]="['../../../../..']">{{visit?.site?.name}}</a></span>
@@ -67,7 +64,7 @@
             <gn-cmr-form-error [form]="grp['form']"></gn-cmr-form-error>
           </div>
         </div>
-        <div class="clearfix mt-3">
+        <div class="clearfix toolbar mt-3">
           <button class="btn btn-primary float-left" [routerLink]="['../../..']" *ngIf="!bEdit">Annuler</button>
           <button class="btn btn-primary float-left" [routerLink]="['../../..', 'observation', observation.id_observation]" *ngIf="bEdit">Annuler</button>
           <button class="btn btn-success float-right" [disabled]="!allForm.valid || bSaving" (click)="onSubmit()">
