--- a/frontend/app/components/sitegroups/form/sitegroups-form.component.html
+++ b/frontend/app/components/sitegroups/form/sitegroups-form.component.html
@@ -1,4 +1,5 @@
 <div class="main">
+  <gn-cmr-header [path]="path" [currentPage]="(bEdit ? 'Edition ' : 'Création ')+ module.forms.sitegroup.label + (bEdit ? ': ' + sitegroup.name : '')"></gn-cmr-header>
   <div class="flex-container">
     <div class="cadre" [style.min-height]="cardContentHeight + 'px'">
       <pnx-map height="100%" class="map-card">
@@ -11,8 +12,6 @@
       </pnx-map>
     </div>
     <div class="cadre scroll">
-      <gn-cmr-breadcrumb [path]="path" [currentPage]="(bEdit ? 'Edition ' : 'Création ')+ module.forms.sitegroup.label + (bEdit ? ' ' + sitegroup.name : '')"></gn-cmr-breadcrumb>
-      <h3>Module: {{ module.module_label }}</h3>
       <div class="clearfix">
         <h4 class="float-left">{{ bEdit ? 'Edition' : 'Création'}} {{module.forms.sitegroup.label}} {{bEdit ? ': ' + sitegroup.name : ''}}</h4>
         <span class="float-right" *ngIf="!bEdit">
@@ -32,7 +31,7 @@
           [formsDefinition]="sitegroupFormDefinitions"
         ></pnx-dynamic-form-generator>
         <gn-cmr-form-error [form]="sitegroupForm"></gn-cmr-form-error>
-        <div class="clearfix mt-3">
+        <div class="clearfix toolbar mt-3">
           <button class="btn btn-primary float-left" [routerLink]="['..']" *ngIf="!bEdit">Annuler</button>
           <button class="btn btn-primary float-left" [routerLink]="['..' , 'sitegroup', sitegroup.id_sitegroup]" *ngIf="bEdit">Annuler</button>
           <button *ngIf="!bChainInput  && !bEdit" class="btn btn-success float-right" [disabled]="!sitegroupForm.valid || bSaving" (click)="onSubmit(true)">
