--- a/frontend/app/components/visits/form/visit-form.component.html
+++ b/frontend/app/components/visits/form/visit-form.component.html
@@ -1,4 +1,5 @@
 <div class="main">
+  <gn-cmr-header [path]="path" [currentPage]="(bEdit ? 'Edition ' : 'Création ') + module.forms.visit.label"></gn-cmr-header>
   <div class="flex-container">
     <div class="cadre" [style.min-height]="cardContentHeight + 'px'">
       <pnx-map height="100%" class="map-card">
@@ -11,8 +12,6 @@
       </pnx-map>
     </div>
     <div class="cadre scroll">
-      <gn-cmr-breadcrumb [path]="path" [currentPage]="(bEdit ? 'Edition ' : 'Création ') + module.forms.visit.label"></gn-cmr-breadcrumb>
-      <h3>Module: {{ module.module_label }}</h3>
       <div class="clearfix">
         <h4 class="float-left">{{ (bEdit ? 'Edition ' : 'Création ') + module.forms.visit.label}}</h4>
         <span class="float-right" *ngIf="!bEdit">
@@ -39,7 +38,7 @@
           [formsDefinition]="visitFormDefinitions"
         ></pnx-dynamic-form-generator>
         <gn-cmr-form-error [form]="genericVisitForm"></gn-cmr-form-error>
-        <div class="clearfix mt-3">
+        <div class="clearfix toolbar mt-3">
           <button class="btn btn-primary float-left" [routerLink]="['..']" *ngIf="!bEdit">Annuler</button>
           <button class="btn btn-primary float-left" [routerLink]="[visit.id_visit]" *ngIf="bEdit">Annuler</button>
           <button *ngIf="!bChainInput  && !bEdit" class="btn btn-success float-right ml-2" [disabled]="!visitForm.valid || !genericVisitForm.valid || !visitForm.get('observation').value || bSaving" (click)="onSubmit(true)">
